[package]
name = "rusty_vessel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplelog = "^0.12.0"
log = "0.4.17"
futures = "0.3.13"
lazy_static = "1.4.0"
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread", "time"] }
chrono = "0.4"